# GoQuant-Assignment

./: .gitignore  CMakeLists.txt  README.md
include/: Config.hpp  DeribitAPI.hpp  Logger.hpp  OrderManager.hpp  WebSocketServer.hpp
src/: Config.cpp  DeribitAPI.cpp  Logger.cpp  OrderManager.cpp  WebSocketServer.cpp  main.cpp
